# vmware-aria-logs

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  glama.json  pyproject.toml  smithery.yaml
.well-known/mcp/: server-card.json
src/vmware_aria_logs/: __init__.py  server.py
src/vmware_aria_logs/analysis/: events.py  incidents.py
src/vmware_aria_logs/clients/: loginsight.py  vrops.py
tests/: test_clients.py  test_events.py  test_incidents.py  test_server.py
